# tinyclunx33_public

./: .gitignore  .gitmodules  CNAME  LICENSE  README.md  version.txt  west.yml
Docs/: .gitignore  Doxyfile  appnote.md  appnote_debugging_usb_video.md  appnote_faq.md  appnote_firmware.md  appnote_first_light.md  appnote_getting_started_guide.md  appnote_mipi_to_uvc_core.md  appnote_zephyr_configuration.md  appnote_zephyr_sdk.md  appnote_zephyr_video_pipeline.md  boards.md  carrier_baseboard.md  carrier_devboard.md  carrier_devkit.dox  carrier_devkit.md  carrier_devkit_prev.dox  carrier_tinycamera.dox  carrier_tinycamera.md  doxygen-custom.css  faq.md  index.dox  index.md  pinout.dox  pinout.md  quick_start.dox  quick_start.md  rtl_reference_design.dox  rtl_reference_design.md  som.md  som_clocks.dox  som_clocks.md  som_faq.md  som_firmware.md  som_flash.dox  som_flash.md  som_fpga.dox  som_fpga.md  som_gpio.dox  (+16 more)
Firmware/zephyr_imx219_stacked/: CMakeLists.txt  app.overlay  prj.conf
Hardware/: .gitignore
RTL/: .gitignore  .gitmodules  Makefile  README.md  build.sbt  fpga_top_som.pdc  fpga_top_som.rdf  fpga_top_som.rvl  fpga_top_som.rvs  fpga_top_som.sty  fpga_top_som.xcf  fpga_top_som_connectivity.rdf  fpga_top_som_connectivity.sty  fpga_top_som_no_mipi.rdf  litex.conf  litex.overlay
docs/: Doxyfile  DoxygenLayout.xml.off  appnote.md  appnote_debugging_usb_video.md  appnote_faq.md  appnote_firmware.md  appnote_first_light.md  appnote_getting_started_guide.md  appnote_zephyr_sdk.md  appnote_zephyr_video_pipeline.md  carrier_devkit.md  doxygen-custom.css  index.md  (+9 more)
(+853 files in other folders)
